log
Thu 29 Jun 2023 02:02:25 AM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
4ac31a3
Thu 29 Jun 2023 02:03:46 AM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:69:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   69 |   map->buckets = (Pair*)calloc(capacity,sizeof(Pair));
      |                ^
cc1: all warnings being treated as errors
Compilation failed
84a3098
Thu 29 Jun 2023 02:06:23 AM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:69:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   69 |   map->buckets = (Pair*)calloc(capacity,sizeof(Pair));
      |                ^
cc1: all warnings being treated as errors
Compilation failed
e641b47
Thu 29 Jun 2023 02:08:06 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
bf81331
Thu 29 Jun 2023 02:19:38 AM UTC: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
ef78f10
Thu 29 Jun 2023 03:32:19 AM UTC: 
 hashmap.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:127:1: error: stray ‘\302’ in program
  127 |   return NULL;
      | ^
hashmap.c:127:2: error: stray ‘\302’ in program
  127 |   return NULL;
      |  ^
hashmap.c:127:9: error: stray ‘\302’ in program
  127 |   return NULL;
      |         ^
Compilation failed
05adcb7
